<resources>
    <string name="app_name">HealthCore</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Create Your Account</string>
    <string name="full_name">Full name</string>
    <string name="signup">Signup</string>
    <string name="medical_staff">medical staff</string>
    <string name="patient">patient</string>
    <string name="account_type">Account type</string>
    <string name="other">other</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="gender">Gender</string>
    <string name="retype_password">Retype Password</string>
    <string name="password">Password</string>
    <string name="password_condition">Enter at least 6 characters</string>
    <string name="password_doesn_t_match">Password doesn\'t match</string>
    <string name="provide_a_username">This field is required</string>
    <string name="not_valid_email">Not a valid email</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="email_already_exist">Email already exist</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="healthcore">HealthCore</string>
    <string name="reset_your_password">Reset Your password</string>
    <string name="reset">Reset</string>
    <string name="title_activity_patient_main">PatientMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_report">Report</string>
    <string name="menu_profile">Profile</string>
    <string name="write_report">Write report</string>
    <string name="type_report_text">Type report text</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="report_added">Your report has been added</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="wrong_email_or_password">Bad connection or Wrong email or password </string>
    <string name="log_out">Log out</string>
    <string name="channel_name">healthCoreChannel</string>
    <string name="channel_description">healthCoreDescription</string>
    <string name="nearby_patients">Nearby Patients</string>
    <string name="nearby_patients_notification_text">We have found nearby patients, Click to see them !.</string>
    <string name="title_activity_staff_main">StaffMainActivity</string>
    <string name="reports">Reports</string>
    <string name="patients">Patients</string>
    <string name="profile">Profile</string>
    <string name="remove">Remove</string>
    <string name="nothing_yet">Nothing yet</string>
    <string name="edit">Edit</string>
    <string name="your_are_online">Your are online</string>
    <string name="you_are_offline">You are offline</string>
</resources>