<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    >

    <fragment
        android:id="@+id/nav_home"
        android:name="com.issasafar.healthcore.ui.patient.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_patient_home" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.issasafar.healthcore.ui.patient.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_patient_report" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.issasafar.healthcore.ui.patient.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_patient_profile" />
</navigation>