<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:id="@+id/activity_register_layout">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/heart_pulse_round"
        android:id="@+id/heart_animation"
        android:visibility="gone"

        />
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/register_sub_layout"
        >


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_fonts_family"
                android:text="@string/full_name"
                android:textSize="@dimen/headline6" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_4dp_size"
                android:layout_marginBottom="@dimen/margin_4dp_size"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_field"
                    android:maxLines="1"
                    android:drawableEnd="@drawable/baseline_person_outline_24"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp_size"
                android:fontFamily="@font/roboto_fonts_family"
                android:text="@string/prompt_email"
                android:textSize="@dimen/headline6" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_4dp_size"
                android:layout_marginBottom="@dimen/margin_4dp_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_field"
                    android:inputType="textEmailAddress"
                    android:drawableEnd="@drawable/outline_email_24"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp_size"
                android:fontFamily="@font/roboto_fonts_family"
                android:text="@string/prompt_password"
                android:textSize="@dimen/headline6" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_4dp_size"
                android:layout_marginBottom="@dimen/margin_4dp_size"
                app:passwordToggleEnabled="true"
                android:id="@+id/password_Layout"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_field"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_4dp_size"
                android:layout_marginBottom="@dimen/margin_4dp_size"
                app:passwordToggleEnabled="true"
                android:id="@+id/retype_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/retype_password"
                    android:id="@+id/retype_password_field"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp_size"
                android:fontFamily="@font/roboto_fonts_family"
                android:text="@string/gender"
                android:textSize="@dimen/headline6" />

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="horizontal"
                android:weightSum="300">


                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_weight="100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp_size"
                    android:text="@string/male"
                    android:drawableStart="@drawable/outline_male_24"
                    android:checked="true"/>




                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_weight="100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp_size"
                    android:text="@string/female"
                    android:drawableStart="@drawable/baseline_female_24"/>


                <RadioButton
                    android:id="@+id/radio_other"
                    android:layout_weight="100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp_size"
                    android:text="@string/other" />


            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp_size"
                android:fontFamily="@font/roboto_fonts_family"
                android:text="@string/account_type"
                android:textSize="@dimen/headline6" />

            <RadioGroup
                android:id="@+id/account_radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">



                    <RadioButton
                        android:id="@+id/radio_patient"
                        android:layout_weight="50"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4dp_size"
                        android:text="@string/patient"
                        app:layout_constraintEnd_toStartOf="@+id/radio_medical_staff"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:checked="true"/>


                    <RadioButton
                        android:id="@+id/radio_medical_staff"
                        android:layout_width="0dp"
                        android:layout_weight="50"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4dp_size"
                        android:text="@string/medical_staff"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/radio_patient"
                        app:layout_constraintTop_toTopOf="parent" />

            </RadioGroup>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp_size"
                android:text="@string/signup" />

        </LinearLayout>
    </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>